# sdlc

./: .gitignore  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  README.md
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml  security.yml
go/: go.mod  sdlc.go  sdlc_test.go
go/cmd/sdlc/: main.go
rust/: Cargo.toml  deny.toml
rust/src/: lib.rs  main.rs
